Just add javafx to `lib` folder