@@ -1,14 +1,29 @@
-## Getting Started
+# Shuffler
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+To run the Shuffler app, navigate to the `src` directory located within the `Poker1` project directory. Running the program is a two-step process and will require running two commands:
 
-## Folder Structure
 
-The workspace contains two folders by default, where:
+1. Type or copy/paste the following command into the terminal after navigating to `Poker1/src`:
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+```bash
+javac --module-path ../lib --add-modules javafx.controls,javafx.fxml App.java
+```
 
-## Dependency Management
+2. Type or copy/paste the following command into the terminal to run the compiled program:
 
-The `JAVA DEPENDENCIES` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-pack/blob/master/release-notes/v0.9.0.md#work-with-jar-files-directly).
+```bash
+java --module-path ../lib --add-modules javafx.controls,javafx.fxml App
+```
+
+You should now see a window that looks similar to this:
+
+![Shuffler Screenshot](./ShufflerScreenshot.png)
+
+Press the `Shuffle` button to get a new set of cards. You can keep shuffling forever, if you like, but that's really all this program does!
+
+When you're finished shuffling, just close the window however you normally close windows in your operating system or window manager of choice.
+
+
+## Class diagram
+
+![Shuffler Class Diagram](./Poker1_UML.png)
